# IPI

./: .gitignore
Übung/Ü3/: einmaleins.cc  ggt.cc  reihenberechnung.cc
Übung/Ü4/: array_sort.cc  geometric_objects.cc  quadratic_equations.cc  root.cc
Übung/Ü5/: pointer.cc  recursive_fcns.cc  structure.cc
Übung/Ü6/: CMakeLists.txt  errorvalue.cc  errorvalue.h  main_errorvalue.cc  main_myvector.cc  myvector.cc  myvector.h
Übung/Ü7/: CMakeLists.txt  circle.cc  circle.h  cube.cc  cube.h  cuboid.cc  cuboid.h  geometric_objects.cc  main.cc  points.cc  rectangle.cc  rectangle.h  rooms.cc  sphere.cc  sphere.h  square.cc  square.h
